package designpatterns.abstractfactory.client;

public interface StarShip {
    String callOutSpecs();
}
