package designpatterns.abstractfactory.parts;

public interface ShipPart {
    String getSpecification();
}
